--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mundo.....hola</h1>
+    <h1>hola....seguimos practicando</h1>
 </body>
 </html>
