--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>hola....seguimos practicando</h1>
+    <h2>seguimos.....</h2>
+    <h3> ahi vamos....</h3>
 </body>
 </html>
